# provii-audit

./: .gitignore  CHANGELOG.md  CLA.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  schema.sql
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  zizmor.yml
.github/workflows/: ci.yml  fuzz.yml  mutants.yml  release.yml  security-audit.yml
.semgrep/: provii-audit.yaml
rust/: Cargo.toml  deny.toml
rust/fuzz/: .gitignore  Cargo.toml
rust/fuzz/fuzz_targets/: fuzz_audit_event_deserialise.rs  fuzz_iso8601.rs  fuzz_strip_pii.rs  fuzz_validate_fields.rs
rust/fuzz/seeds/fuzz_audit_event_deserialise/: truncated.json  valid_minimal.json
rust/fuzz/seeds/fuzz_strip_pii/: dob.txt  email.txt  ipv4.txt  ipv6.txt  mixed.txt  no_pii.txt  unicode.txt
rust/src/: consumer.rs  error.rs  event.rs  lib.rs  logger.rs  privacy.rs  sanitize.rs  severity.rs
rust/src/sinks/: mod.rs  queue.rs
