[package]
name = "provii-audit-fuzz"
version = "0.0.0"
edition = "2021"
publish = false
license = "LicenseRef-Proprietary"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }
serde_json = "1.0"

[dependencies.provii-audit]
path = ".."
features = ["consumer"]

[[bin]]
name = "fuzz_strip_pii"
path = "fuzz_targets/fuzz_strip_pii.rs"
doc = false

[[bin]]
name = "fuzz_audit_event_deserialise"
path = "fuzz_targets/fuzz_audit_event_deserialise.rs"
doc = false

[[bin]]
name = "fuzz_validate_fields"
path = "fuzz_targets/fuzz_validate_fields.rs"
doc = false

[[bin]]
name = "fuzz_iso8601"
path = "fuzz_targets/fuzz_iso8601.rs"
doc = false

[workspace]
members = ["."]
